--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RESERVATIONS</title>
+  <title>Make a reservation | </title>
 </head>
 <body>
-
   <script src="utils.js"></script>
   <script src="main.js"></script>
 </body>
